# simframe

./: .coverage  .gitattributes  .gitignore  .gitlab-ci.yml  BEGIN.ocelot.npz  FODO.yaml  MANIFEST.in  README.md  coverage.xml  git_archive.bat  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
ELEGANT/ElegantWriter/: testing_objects.py
MasterLattice/Data_Files/: HRRG_1D_RF.gdf  HRRG_combined_sols_100mm_onaxis.gdf  Measured_Bucking_Solenoid_2019.gdf  Measured_Main_Solenoid_2019.gdf  SwissFEL_linac_sols.gdf  mockup2m_moved.gdf  mockup2m_moved.txt
MasterLattice/Lattices/: CLA-S02.def  CLA10-BA1.def  CLA10-BA1_OM.def  clara400_v12_v3_elegant.def  clara400_v12_v3_elegantVBC.def
MasterLattice/YAML/: FEBE5.yaml  FEBE8.yaml  FEBE_ARC.json  Injector10_Separated_Solenoids.yaml  Injector400.yaml  L02.yaml  S04.yaml  S05.yaml  VBC.yaml
SimulationFramework/: .gitignore  Executables.yaml  Framework.py  FrameworkHelperFunctions.py  Framework_Settings.py  Framework_centre.py  Framework_elements.py  Framework_lattices.py  Framework_objects.py  Framework_testing.py  _version.py  f  requirements.txt  yaml_checker.py
SimulationFramework/ClassFiles/: Optimise_Genesis_Elegant.py  Optimise_longitudinal_Elegant.py  Optimise_transverse.py  genesisBeamFile.py  genesisBeamFileMOGA.py  marginal_plot.py  optimise_longitudinal_Elegant_MOGA.py  runElegant.py  runElegantGenesis.py
SimulationFramework/Codes/: Executables.py  __init__.py  elementkeywords.yaml  type_conversion_rules.yaml
SimulationFramework/Elements/: apcontour.py  aperture.py  beam_arrival_monitor.py  beam_position_monitor.py  bellows.py  bunch_length_monitor.py  cavity.py  center.py  charge.py  cleaner.py  collimator.py  dipole.py  drift.py  elementkeywords.yaml  faraday_cup.py  fel_modulator.py  global_error.py  gpt_ccs.py  integrated_current_transformer.py  kicker.py  longitudinal_wakefield.py  marker.py  monitor.py  octupole.py  quadrupole.py  rcollimator.py  rf_deflecting_cavity.py  scatter.py  screen.py  sextupole.py  shutter.py  solenoid.py  valve.py  wakefield.py  wall_current_monitor.py  watch_point.py  wiggler.py
SimulationFramework/Examples/: .gitignore  Example Screen Image from OnlineModel Tracking Data.ipynb  Example Screen Image from Tracking Data.ipynb  Testing New Beam and Twiss Functions.ipynb  Untitled.ipynb  Untitled1.ipynb  VC Image to GPT.ipynb  Zernike.ipynb  framework_optimisation_test.py  framework_test.py  framework_test_OM.py  plotting.ipynb  test.yaml
SimulationFramework/Modules/: MathParser.py  SDDSFile.py  UnitFloat.py  __init__.py  astra_plotter_hdf5.py  astra_plotter_test.py  button group.py  constants.py  constraints.py  constraintsTest.py  data_plotter_h5.py  gdf_beam.py  gdf_emit.py  gdf_to_hdf5.py  id_number.py  id_number_server.py  latticeDraw.py  merge_two_dicts.py  minimumVolumeEllipse.py  multiAxisPlot.py  multiPlot.py  nelder_mead.py  optimiser.py  particles_old.py  plotting.py  pmd_units.py  (+6 more)
docs/: 2.0  rebuild.sh  requirements.txt
source/: conf.py  index.rst
tests/: .gitignore  framework_test.py  twiss.py
unit_tests/: test_beam.py  test_field.py  test_framework.py  test_framework_objects.py  test_track.py  test_twiss.py
(+871 files in other folders)
