[build-system]
requires = [
    "setuptools",
    "versioneer",
]
build-backend = "setuptools.build_meta"

[project]
name = "AcceleratorSimFrame"
description = "A python framework for particle accelerator simulations"
readme = "README.md"
dynamic = ["version"]
authors = [
    {name = "James Jones", email = "james.jones@stfc.ac.uk"},
]
license = "GPL-3.0-or-later"
maintainers = [
    {name = "James Jones", email = "james.jones@stfc.ac.uk"},
    {name = "Alex Brynes", email = "alexander.brynes@stfc.ac.uk"},
    {name = "Mark Johnson", email = "mark.johnson@stfc.ac.uk"},
]
dependencies = [
    "deepdiff>=5",
    "h5py>=2.10",
    "munch>=2.5",
    "numpy>=1.19,<2",
    "tqdm>=4",
    "PyQt5>=5.1",
    "PyYAML>=5.3",
    "mpl-axes-aligner>=1.1",
    "lox>=0.11",
    "fastKDE>=2.1.5",
    "pydantic>=2.5.3",
    "attrs>=23.2.0",
    "ocelot-desy==25.06.0",
    "scipy>=1.5, <1.14",
    "soliday.sdds",
    "easygdf>=2.1.1",
    "deap",
    "pyqtgraph",
    "sphinx>8",
    "sphinx-rtd-theme",
    "myst-nb",
    "sphinx_autodoc_typehints>3",
    "numba",
    "pyfftw",
    "numexpr",
]

requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
#    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.optional-dependencies]

test = [
    "pytest",
    "pytest-cov",
    "MasterLattice",
    "SimCodes",
]

docs = [
    "sphinx>8",
    "sphinx-rtd-theme",
    "myst-nb",
    "sphinx_autodoc_typehints>=3",
    "MasterLattice",
    "SimCodes",
]

[project.urls]
Homepage = "https://github.com/astec-stfc/simframe"
Repository = "https://github.com/astec-stfc/simframe.git"
Issues = "https://github.com/astec-stfc/simframe/-/issues/"

[tool.coverage.run]
omit = [
    # omit this single file
    "_version.py",
    "SimulationFramework/Codes/MAD8/MAD8.py",
    "SimulationFramework/Modules/Beams/mad8.py",
    ]
